fix asean desktop l2 button content alignment

--- a/static/fairy-l2.css
+++ b/static/fairy-l2.css
@@ -96,7 +96,7 @@
 /* Variant Button  */
 
 .capablanca , .shako , .shogun , .schess , .hoppelpoppel , .grand, 
-.makpong, .makrukl2, .sittuyin, .chatrang {
+.makpong, .makrukl2, .sittuyin, .chatrang, .asean {
     display: flex;
     flex: column;
     justify-content: flex-start;
